--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/7.md
@@ -497,6 +497,7 @@ Sử dụng lệnh `kathara lstart` để khởi động hệ thống máy ảo
 
   ```sh
   /etc/init.d/quagga status
+  ```
 
 ==> Khi đã sửa các sai sót hãy gõ lệnh `kathara lrestart` để khởi động lại hệ thống máy ảo
 :::
@@ -544,4 +545,9 @@ Sau đó từ `pc1` và `pc2` gõ lệnh `links` và kết nối đến `12.18.1
 
 Sử dụng lệnh `kathara lclean` để hủy hệ thống máy ảo
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-13-46-Screen%20Shot%202021-11-13%20at%2015.13.38.png">
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/13-15-13-46-Screen%20Shot%202021-11-13%20at%2015.13.38.png" width="600">
+
+
+```txt
+
+```
