--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
@@ -1,10 +1,13 @@
-# ![Group Class.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-13-07-13-Group%20Class.png)Bài Nhóm_Quản trị hệ thống ![Data Science System.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-13-07-28-Data%20Science%20System.png)
+# Buổi 6: Thực hành Nhóm <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-13-07-13-Group%20Class.png">
 
-Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu cài đặt các dịch vụ mạng phục vụ cho công việc của công ty như sau:
+::: tip 📝 ĐỀ BÀI
 
-<img title="" src="https://lh3.googleusercontent.com/cXx6M7P8cVnjPgZolbGXkmmSGZhKSdiXc8SgdL1hF4FZYjqziVv1WFyB53CNb_ZfE9S9MrSioDZYoZLNuXKe3F4kI88uhZuuV-JNYfXfBA_ixk4_ahd6BrMbg2y329X_ctkojijV" alt="" width="531">
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1aGSc0d8r1UFqoMZxYi4jQqA_3J8lzUUO/preview"></iframe>
+</div>
+:::
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) Câu 1.1
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.1: Thiết lập `Desktop`/ `Server`
 
 | Phần mềm                                                                                                                                                                                                            | Nhà sản xuất  |
 | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------- |
@@ -12,47 +15,50 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-01-54-icons8-centos.png" title="" alt="icons8-centos.png" width="40"> [CentOS](https://www.centos.org/download/)                  | RedHat        |
 | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-02-51-Lubuntu_logo_only.svg" title="" alt="Lubuntu_logo_only.svg" width="40"> [Lubuntu](https://lubuntu.net/downloads/)           | Mario Behling |
 
-### Tắt dịch vụ `DHCP Server`
+### 1. Tắt dịch vụ `DHCP Server`
 
 - **B1:** `File` -> `Host Network Manager`
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-46-46-Screen%20Shot%202021-05-24%20at%2010.46.15.png" title="" alt="Screen Shot 2021-05-24 at 10.46.15.png" width="213">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-46-46-Screen%20Shot%202021-05-24%20at%2010.46.15.png">
 
 - **B2:** Tắt `DHCP Server` như sau (*1 trong 2 cách*)
   
-  <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-47-34-Screen%20Shot%202021-05-24%20at%2010.40.57.png" alt="Screen Shot 2021-05-24 at 10.40.57.png" width="497">W
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-47-34-Screen%20Shot%202021-05-24%20at%2010.40.57.png">
 
-### Cài và cấu hình cho CentOS 8 <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-01-54-icons8-centos.png" title="" alt="icons8-centos.png" width="35">
+### 2. Cài và cấu hình cho CentOS <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-01-54-icons8-centos.png" width="35">
 
-#### 1. Thực hiện cài `CentOS 8` lên `VituralBox` (Cài bản không `GUI`) :
+#### a. Thực hiện cài `CentOS` lên `VituralBox` (Cài bản không `GUI`) :
 
-💡 Cài đặt `VituralBox` và tiến hành cài `CentOS 8` (*chọn bản không `GUI`*)
+::: tip 💡 MẸO
 
-<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-18-10-Screen%20Shot%202021-05-24%20at%2020.52.30.png" alt="Screen Shot 2021-05-24 at 20.52.30.png" width="457">
+`CentOS` rất nặng, lại còn chạy máy ảo nên để phù hợp cho mọi cấu hình, hãy sử dụng bạn `CLI`
+:::
 
-#### 2. Cài đặt `NAT Network`
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-18-10-Screen%20Shot%202021-05-24%20at%2020.52.30.png">
+
+#### b. Cài đặt `NAT Network`
 
 - **B1**: Chọn `VituralBox` -> `Preferences`
 
-<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-48-37-Screen%20Shot%202021-05-24%20at%2010.41.17.png" title="" alt="Screen Shot 2021-05-24 at 10.41.17.png" width="216">
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-48-37-Screen%20Shot%202021-05-24%20at%2010.41.17.png" width="230">
 
 - **B2**: Qua cửa sổ `Network` và nhấn nút tạo `NAT Network`
 
-<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-49-36-Screen%20Shot%202021-05-24%20at%2010.41.32.png" alt="Screen Shot 2021-05-24 at 10.41.32.png" width="548">
+<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-49-36-Screen%20Shot%202021-05-24%20at%2010.41.32.png" width="550">
 
 - **B3**: Cấu hình `NAT Network` như sau và nhấn `OK`
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-51-29-Screen%20Shot%202021-05-24%20at%2010.41.50.png" title="" alt="Screen Shot 2021-05-24 at 10.41.50.png" width="462">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-51-29-Screen%20Shot%202021-05-24%20at%2010.41.50.png"  width="500">
 
-#### 3. Chuyển đổi `network` của máy ảo `CentOS 8` qua `NAT Network`
+#### c.Chuyển đổi `network` của máy ảo `CentOS` qua `NAT Network`
 
-- **B1**: Chọn `setting` máy ảo `CentOS 8` trong `VituralBox` 
+- **B1**: Chọn `setting` máy ảo `CentOS` trong `VituralBox` 
 
 - **B2:** Chọn `Network`, đổi sang `NAT Network` và chọn `QTHT` như đã cấu hình trước đó 
 
-<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-52-13-Screen%20Shot%202021-05-24%20at%2010.42.02.png" alt="Screen Shot 2021-05-24 at 10.42.02.png" width="583">
+<img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-10-52-13-Screen%20Shot%202021-05-24%20at%2010.42.02.png" width="600">
 
-#### 4. Kiểm tra cấu hình mạng trong `CentOS 8`
+#### d. Kiểm tra cấu hình mạng trong `CentOS`
 
 - **B1:** Kiểm tra đã cài đặt `network-scripts` chưa, nếu chưa gõ lệnh : 
   
@@ -60,69 +66,75 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
    $ yum install network-scripts
   ```
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-18-35-Screenshot%202021-05-22%20223917.png" title="" alt="Screenshot 2021-05-22 223917.png" width="593">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-18-35-Screenshot%202021-05-22%20223917.png" width="600">
 
 - **B2**: Gõ `ipconfig -a` kiểm tra : 
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-19-25-Screenshot%202021-05-22%20222747.png" title="" alt="Screenshot 2021-05-22 222747.png" width="528">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-19-25-Screenshot%202021-05-22%20222747.png"  width="530">
   
-  > Xác định `device network` đang sử dụng là `enp0s3`, gõ lệnh dưới đây để cấu hình `network` (*dùng tài khoản `root`*) : 
+  ::: tip 💡 MẸO
+
+  Xác định `device network` đang sử dụng là `enp0s3`, gõ lệnh dưới đây để cấu hình `network` (*dùng tài khoản `root`*) : 
   
   ```bash
    $ nano /etc/sysconfig/network-scripts/ifcfg-enp0s3
   ```
-  
+
   <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-20-23-Screenshot%202021-05-22%20223538.png" title="" alt="Screenshot 2021-05-22 223538.png" width="566">
   
-  > Hoặc cũng có thể sử dụng lệnh `mntui` để cấu hình giao diện như sau : 
+  Hoặc cũng có thể sử dụng lệnh `mntui` để cấu hình giao diện như sau : 
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-21-20-Screenshot%202021-05-23%20100531.png" title="" alt="Screenshot 2021-05-23 100531.png" width="547">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-21-20-Screenshot%202021-05-23%20100531.png" width="547">
+  :::
 
 - **B3**: Gõ lệnh `service network restart` để khởi động lại `network` : 
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-22-47-Screenshot%202021-05-22%20224123.png" title="" alt="Screenshot 2021-05-22 224123.png" width="531">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-22-47-Screenshot%202021-05-22%20224123.png" width="530">
 
 - **B4**: Dùng lệnh `ifconfig -a` để kiểm tra sau khi cấu hình : 
   
-  <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-33-19-Screenshot%202021-05-23%20100934.png" alt="Screenshot 2021-05-23 100934.png" width="534">
+  <img title="" src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-33-19-Screenshot%202021-05-23%20100934.png"  width="550">
 
 - **B5**: Thực hiện lệnh `ping google.com` để kiểm tra mạng có truy cập được không 
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-17-44-Screen%20Shot%202021-05-24%20at%2011.17.38.png" title="" alt="Screen Shot 2021-05-24 at 11.17.38.png" width="604">
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-17-44-Screen%20Shot%202021-05-24%20at%2011.17.38.png" width="600">
 
-==> Vậy là ta đã thoả yêu cầu cấu hình mạng cho máy ảo `CentOS 8`
+==> Vậy là ta đã thoả yêu cầu cấu hình mạng cho máy ảo `CentOS`
 
-### Cài và cấu hình Lubuntu <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-02-51-Lubuntu_logo_only.svg" title="" alt="Lubuntu_logo_only.svg" width="35">
+### 3. Cài và cấu hình Lubuntu <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/23-23-02-51-Lubuntu_logo_only.svg" width="35">
 
-#### 1. Thực hiện cài `Lubuntu 20.04` lên `VituralBox`
+#### a. Thực hiện cài `Lubuntu 20.04` lên `VituralBox`
 
-> 💡 Sau khi cài đặt `Lubuntu 20.04` tiến hành vào `Qterminal` 
-> 
-> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-02-12-Screen%20Shot%202021-05-24%20at%2011.01.43.png" title="" alt="Screen Shot 2021-05-24 at 11.01.43.png" width="533">
+::: tip 💡 MẸO
 
-#### 2. Cấu hình network cho `Lubuntu`
+Sau khi cài đặt `Lubuntu 20.04` tiến hành vào `Qterminal` 
+ 
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-02-12-Screen%20Shot%202021-05-24%20at%2011.01.43.png" width="550">
+:::
 
-> - **B1**: Chọn `setting` máy ảo `Lubuntu` trong `VituralBox`
-> 
-> - **B2:** Chọn `Network`, đổi sang `NAT Network` như sau : 
->   
->   <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-20-31-34-Screen%20Shot%202021-05-24%20at%2020.28.45.png" title="" alt="Screen Shot 2021-05-24 at 20.28.45.png" width="519">
+#### b. Cấu hình network cho `Lubuntu`
 
-#### 3. Kiểm tra network trong `Lubuntu`
+**B1**: Chọn `setting` máy ảo `Lubuntu` trong `VituralBox`
 
-> - **B1**: Thực hiện lệnh `ifconfig -a` để kiểm tra cấu hình mạng : 
->   
->   <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-09-00-Screen%20Shot%202021-05-24%20at%2011.07.57.png" title="" alt="Screen Shot 2021-05-24 at 11.07.57.png" width="496">
-> 
-> - **B2**: Thực hiện lệnh `ping google.com` để kiểm tra mạng có truy cập được không 
->   
->   <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-12-55-Screen%20Shot%202021-05-24%20at%2011.11.41.png" title="" alt="Screen Shot 2021-05-24 at 11.11.41.png" width="535">
-> 
-> ==> Như vậy là thoả
+**B2:** Chọn `Network`, đổi sang `NAT Network` như sau : 
 
----
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-20-31-34-Screen%20Shot%202021-05-24%20at%2020.28.45.png" width="530">
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.2**
+#### c. Kiểm tra network trong `Lubuntu`
+
+- **B1**: Thực hiện lệnh `ifconfig -a` để kiểm tra cấu hình mạng : 
+
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-09-00-Screen%20Shot%202021-05-24%20at%2011.07.57.png" width="500">
+
+- **B2**: Thực hiện lệnh `ping google.com` để kiểm tra mạng có truy cập được không 
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-12-55-Screen%20Shot%202021-05-24%20at%2011.11.41.png" width="535">
+ 
+==> Như vậy là thoả
+
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.2: Tạo các `user` và `group`
+
+Cho danh sách các `user` như sau: 
 
 > | STT | Họ tên        | Nhóm       | Username     | Password    | Mô tả        |
 > | --- | ------------- | ---------- | ------------ | ----------- | ------------ |
@@ -134,9 +146,7 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 > | 6   | Mã Siêu       | banhang    | sieu.ma      | masieu      | Nhân viên    |
 > | 7   | Hoàng Trung   | banhang    | trung.hoang  | hoangtrung  | Nhân viên    |
 
-### Thực hiện tạo `user` và `group` theo yêu cầu :
-
-#### 1. Tạo Group
+### 1. Tạo Group
 
 - **B1**: Thực hiện các lệnh sau :
   
@@ -149,9 +159,9 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B2**: Thực hiện lệnh `cat /etc/group` để kiểm tra :
   
-  ![Screenshot 2021-05-22 233744.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-25-44-Screenshot%202021-05-22%20233744.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-25-44-Screenshot%202021-05-22%20233744.png">
 
-#### 2. Tạo các user
+### 2. Tạo các user
 
 - **B1**: Thực hiện các lệnh sau : 
   
@@ -168,9 +178,9 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B2**: Gõ lệnh `cat /etc/passwd` để kiểm tra 
   
-  ![Screenshot 2021-05-22 234121.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-29-56-Screenshot%202021-05-22%20234121.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-29-56-Screenshot%202021-05-22%20234121.png">
 
-#### 3. Nhập user vào group phù hợp
+### 3. Nhập user vào group phù hợp
 
 - **B1**: Thực hiện các lệnh sau : 
   
@@ -188,13 +198,13 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B2**: Gõ lệnh `cat /etc/groups` để kiểm tra 
   
-  ![Screen Shot 2021-05-24 at 11.33.59.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-34-22-Screen%20Shot%202021-05-24%20at%2011.33.59.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-34-22-Screen%20Shot%202021-05-24%20at%2011.33.59.png">
 
-#### 4. Cấp quyền `root` cho nhóm `ban giám đốc`
+### 4. Cấp quyền `root` cho nhóm `ban giám đốc`
 
 - **B1**: Thực hiện lệnh `nano /etc/sudoers` (*ở tài khoản `root`*), và cấu hình như sau : 
   
-  ![Screenshot 2021-05-22 235237.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-38-00-Screenshot%202021-05-22%20235237.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-38-00-Screenshot%202021-05-22%20235237.png">
 
 - **B2**: Hãy thực hiện các lệnh sau để kiểm tra 
   
@@ -205,15 +215,11 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ sudo nano /etc/shadow
   ```
   
-  ![Screen Shot 2021-05-24 at 11.46.56.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-47-16-Screen%20Shot%202021-05-24%20at%2011.46.56.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-11-47-16-Screen%20Shot%202021-05-24%20at%2011.46.56.png">
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.3: Tạo `/data` và phân quyền
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.3**:
-
-### Thực hiện tạo `/data` và phân quyền
-
-#### 1. Tạo thư mục `/data` và đổi `group` sở hữu
+### 1. Tạo thư mục `/data` và đổi `group` sở hữu
 
 - **B1:** Tạo group `truongphong` và thêm `luubi` và `trieuvan` vào : 
   
@@ -234,13 +240,13 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B3**: Sử dụng lệnh `ls -l /data` để kiểm tra : 
   
-  ![Screen Shot 2021-05-24 at 12.39.57.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-45-44-Screen%20Shot%202021-05-24%20at%2012.39.57.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-45-44-Screen%20Shot%202021-05-24%20at%2012.39.57.png" width="500">
 
 ### 2. Kiểm tra phân quyền
 
 - **B1:** Tạo file `123.txt` bằng lệnh `nano /data/123.txt` như sau : 
 
-![Screen Shot 2021-05-24 at 12.47.18.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-53-16-Screen%20Shot%202021-05-24%20at%2012.47.18.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-53-16-Screen%20Shot%202021-05-24%20at%2012.47.18.png" width="550">
 
 - **B2**:  Phân quyền như sau : 
   
@@ -251,9 +257,9 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B3**: Thực hiện lệnh `ls -l /data/` để kiểm tra 
   
-  ![Screen Shot 2021-05-24 at 13.14.12.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-19-16-Screen%20Shot%202021-05-24%20at%2013.14.12.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-19-16-Screen%20Shot%202021-05-24%20at%2013.14.12.png">
 
-#### Thực hiện kiểm tra
+### 3. Thực hiện kiểm tra
 
 - **B1:** Kiểm tra người trong nhóm `bangiamdoc` có quyền `read/write/execute`
   
@@ -262,9 +268,12 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ sudo nano /data/123.txt  #kiểm tra
   ```
   
-  ==> Thử ghi và `save` lại, nếu thành công là được : 
+  ::: tip 💡 MẸO
   
-  ![Screen Shot 2021-05-24 at 12.50.48.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-55-32-Screen%20Shot%202021-05-24%20at%2012.50.48.png)
+  Thử ghi và `save` lại, nếu thành công là được : 
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-12-55-32-Screen%20Shot%202021-05-24%20at%2012.50.48.png">
+  :::
 
 - **B2**: Kiểm tra người trong nhóm `truongphong` có quyền `read/execute`
   
@@ -273,7 +282,7 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ sudo nano /data/123.txt #kiểm tra
   ```
   
-  ![Screen Shot 2021-05-24 at 13.16.47.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-24-39-Screen%20Shot%202021-05-24%20at%2013.16.47.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-24-39-Screen%20Shot%202021-05-24%20at%2013.16.47.png" width="550">
   
   ==> Như vậy thành viên trong `truongphong` không thể **write**
 
@@ -284,19 +293,15 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ cat /data/123.txt
   ```
   
-  ![Screen Shot 2021-05-24 at 13.23.27.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-25-34-Screen%20Shot%202021-05-24%20at%2013.23.27.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-25-34-Screen%20Shot%202021-05-24%20at%2013.23.27.png">
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.4: Cài đặt và cấu hình `DHCP Server`
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.4**
-
-### Cài đặt và cấu hình `DHCP Server`
-
-#### 1.  Cài đặt `DHCP Server` cho `CentOS 8`
+### 1.  Cài đặt `DHCP Server` cho `CentOS`
 
 - **B1**: Dùng lệnh `yum install dhcp-server` để cài đặt :
   
-  ![Screen Shot 2021-05-24 at 13.32.57.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-33-12-Screen%20Shot%202021-05-24%20at%2013.32.57.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-13-33-12-Screen%20Shot%202021-05-24%20at%2013.32.57.png">
 
 - **B2**: Copy file mẫu và cấu hình bằng lệnh, và cấu hình như sau : 
   
@@ -304,7 +309,7 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ cp /usr/share/doc/dhcp-server/dhcpd.conf.example /etc/dhcp/dhcp.conf
   ```
   
-  ![Screen Shot 2021-05-24 at 14.13.05.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-04-02-Screen%20Shot%202021-05-24%20at%2014.13.05.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-04-02-Screen%20Shot%202021-05-24%20at%2014.13.05.png" width="600">
 
 - **B3**: Thực hiện lênh sau để chạy `DHCP Server` : 
   
@@ -316,9 +321,9 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ firewall-cmd --reload
   ```
   
-  ![Screen Shot 2021-05-24 at 14.21.18.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-07-22-Screen%20Shot%202021-05-24%20at%2014.21.18.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-07-22-Screen%20Shot%202021-05-24%20at%2014.21.18.png" width="550">
 
-#### 2. Kiểm tra `Lubuntu` sau khi cấu hình `DHCP Server`
+### 2. Kiểm tra `Lubuntu` sau khi cấu hình `DHCP Server`
 
 - **B1**: Khởi động lại dịch vụ mạng trên `Lubuntu` bằng lệnh : 
   
@@ -328,23 +333,20 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 
 - **B2**: Gõ `ifconfig -a` để kiểm tra cấu hình mạng : 
   
-  ![Screen Shot 2021-05-24 at 16.10.10.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-10-35-Screen%20Shot%202021-05-24%20at%2016.10.10.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-16-10-35-Screen%20Shot%202021-05-24%20at%2016.10.10.png" width="500">
 
-==> Đã thành công, dạy `IP` từ `10.0.2.15` chuyển thành `10.0.2.50` vì đây là `IP` của `DHCP Server` do `CentOS 8` cấp 
+==> Đã thành công, dạy `IP` từ `10.0.2.15` chuyển thành `10.0.2.50` vì đây là `IP` của `DHCP Server` do `CentOS` cấp 
 
----
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.5**
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.5: Cấu hình tưởng lửa trên `CentOS`
 
-### Cấu hình tường lửa trên `CentOS 8`
-
-#### 1. Cài đặt và chạy tường lửa
+### 1. Cài đặt và chạy tường lửa
 
 - **B1**: Gõ lệnh `yum install iptables` và `yum install iptables-services`
   
-  ![Screen Shot 2021-05-24 at 16.12.58.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-03-46-Screen%20Shot%202021-05-24%20at%2016.12.58.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-03-46-Screen%20Shot%202021-05-24%20at%2016.12.58.png" width="600">
   
-  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-56-35-Screen%20Shot%202021-05-24%20at%2017.56.27.png" title="" alt="Screen Shot 2021-05-24 at 17.56.27.png" width="331"
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-56-35-Screen%20Shot%202021-05-24%20at%2017.56.27.png"  width="331">
 
 - **B2**:  Thực hiện lệnh sau :
   
@@ -353,11 +355,13 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ systemctl status iptables # kiểm tra tường lửa
   ```
   
-  ![Screen Shot 2021-05-24 at 17.50.56.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-55-17-Screen%20Shot%202021-05-24%20at%2017.50.56.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-17-55-17-Screen%20Shot%202021-05-24%20at%2017.50.56.png" width="600">
 
-#### 2. Cấu hình `rule` cho tường lửa
+### 2. Cấu hình `rule` cho tường lửa
 
-💡 Có rất nhiều số port tượng trưng cho mỗi cổng kết nối, tuy nhiên chỉ đề cập những port thông dụng sau : 
+::: tip 💡 MẸO VÀ KIẾN THỨC
+
+Có rất nhiều số port tượng trưng cho mỗi cổng kết nối, tuy nhiên chỉ đề cập những port thông dụng sau : 
 
 | Cổng số | Sử dụng                                             |
 | ------- | --------------------------------------------------- |
@@ -376,6 +380,8 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
 | 161     | SNMP (*Simple Network Management Protocol*)         |
 | 194     | IRC (Internet Relay Chat)                           |
 | 443     | HTTPS (*HTTP Secure*)                               |
+:::
+
 
 - **B1**: Thực hiện lần lượt các lệnh sau : 
   
@@ -396,23 +402,19 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   iptables -A INPUT -p icmp -s 10.0.2.50 -j ACCEPT
   ```
   
-  ![Screen Shot 2021-05-24 at 19.44.49.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-19-45-35-Screen%20Shot%202021-05-24%20at%2019.44.49.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-19-45-35-Screen%20Shot%202021-05-24%20at%2019.44.49.png" width="600">
 
-- **B2**: Từ `Lubuntu` ping tới `CentOS 8`
+- **B2**: Từ `Lubuntu` ping tới `CentOS`
   
-  ![Screen Shot 2021-05-24 at 19.47.02.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-19-47-09-Screen%20Shot%202021-05-24%20at%2019.47.02.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-19-47-09-Screen%20Shot%202021-05-24%20at%2019.47.02.png" width="450">
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.6: Sử dụng dịch vụ `SSH`
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.6**:
-
-### Cài đặt dịch vụ `SSH`
-
-#### 1. Cài đặt và chạy `SSH`
+### 1. Cài đặt và chạy `SSH`
 
 - **B1**: Gõ lệnh `yum install openssh` để cài đặt `SSH` : 
   
-  ![Screen Shot 2021-05-24 at 16.26.35.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-19-10-Screen%20Shot%202021-05-24%20at%2016.26.35.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-19-10-Screen%20Shot%202021-05-24%20at%2016.26.35.png">
 
 - **B2**: Thực hiện lệnh sau : 
   
@@ -421,33 +423,30 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ systemctl status sshd
   ```
   
-  ![Screen Shot 2021-05-24 at 21.22.36.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-22-57-Screen%20Shot%202021-05-24%20at%2021.22.36.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/24-21-22-57-Screen%20Shot%202021-05-24%20at%2021.22.36.png">
 
-#### 2. Cấu hình `SSH`
+### 2. Cấu hình `SSH`
 
 - **B1**: Tạo group `nhanvien` và thêm thành viên tương ứng 
 
 - **B2:** Gõ lệnh `nano /etc/ssh/sshd_config`
   
-  ![Screen Shot 2021-05-25 at 22.02.21.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-02-41-Screen%20Shot%202021-05-25%20at%2022.02.21.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-02-41-Screen%20Shot%202021-05-25%20at%2022.02.21.png">
 
 - **B3**: Gõ lệnh `systemctl restart sshd` và kiểm tra kết nối 
   
-  ![Screen Shot 2021-05-25 at 22.05.51.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-06-23-Screen%20Shot%202021-05-25%20at%2022.05.51.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-06-23-Screen%20Shot%202021-05-25%20at%2022.05.51.png">
   
-  ![Screen Shot 2021-05-25 at 22.06.51.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-07-15-Screen%20Shot%202021-05-25%20at%2022.06.51.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-22-07-15-Screen%20Shot%202021-05-25%20at%2022.06.51.png">
 
----
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.7**
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.7: Cấu hình `DNS` cho `CentOS`
 
-### Cấu hình `DNS` cho `CentOS 8`
-
-#### 1. Cài đặt `DNS` tools
+### 1. Cài đặt `DNS` tools
 
 - **B1**: Gõ lệnh `yum install bind bind-utils`
   
-  ![Screen Shot 2021-05-25 at 08.57.29.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-12-21-Screen%20Shot%202021-05-25%20at%2008.57.29.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-12-21-Screen%20Shot%202021-05-25%20at%2008.57.29.png">
 
 - **B2**: Thực hiện các lệnh sau : 
   
@@ -456,19 +455,22 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ systemctl status named     # kiểm tra named
   ```
   
-  ![Screen Shot 2021-05-25 at 09.21.19.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-14-29-Screen%20Shot%202021-05-25%20at%2009.21.19.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-14-29-Screen%20Shot%202021-05-25%20at%2009.21.19.png" width="600">
 
-#### 2. Cấu hình `DNS`
+### 2. Cấu hình `DNS`
 
 - **B1** : Gõ lệnh `nano /etc/named.conf` và cấu hình như sau : 
   
-  ![Screen Shot 2021-05-25 at 09.46.43.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-21-55-Screen%20Shot%202021-05-25%20at%2009.46.43.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-21-55-Screen%20Shot%202021-05-25%20at%2009.46.43.png">
   
-  > 🤔 Đặt `listen-on port 53` là `any` có thể lắng nghe từ mọi `IP`
-  > 
-  > 🤔 Đặt `allow-query` là `any` để cho phép truy vấn từ mọi `IP`
+  ::: tip 🤔 GIẢI THÍCH
+
+  - Đặt `listen-on port 53` là `any` có thể lắng nghe từ mọi `IP`
   
-  ![Screen Shot 2021-05-25 at 09.54.59.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-24-24-Screen%20Shot%202021-05-25%20at%2009.54.59.png)
+  - Đặt `allow-query` là `any` để cho phép truy vấn từ mọi `IP`
+  :::
+  
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-24-24-Screen%20Shot%202021-05-25%20at%2009.54.59.png">
 
 - **B2** : Cấu hình **phân giải xuôi**
   
@@ -478,7 +480,7 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ nano /var/named/forward.qtht
   ```
   
-  ![Screen Shot 2021-05-25 at 13.50.28.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-50-37-Screen%20Shot%202021-05-25%20at%2013.50.28.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-50-37-Screen%20Shot%202021-05-25%20at%2013.50.28.png">
 
 - **B3** : Cấu hình **phân giải ngược** : 
   
@@ -488,7 +490,7 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ nano /var/named/reverse.qtht
   ```
   
-  ![Screen Shot 2021-05-25 at 13.50.58.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-51-06-Screen%20Shot%202021-05-25%20at%2013.50.58.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-51-06-Screen%20Shot%202021-05-25%20at%2013.50.58.png">
 
 - **B4**: Chạy lại `named` và kiểm tra : 
   
@@ -502,19 +504,15 @@ Công ty `Tam Quốc` chuyên kinh doanh Lẩu cay `Tứ Xuyên` có nhu cầu c
   $ nslookup 10.0.2.10 10.0.2.2
   ```
   
-  ![Screen Shot 2021-05-25 at 09.48.16.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-31-03-Screen%20Shot%202021-05-25%20at%2009.48.16.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-31-03-Screen%20Shot%202021-05-25%20at%2009.48.16.png">
   
-  ![Screen Shot 2021-05-25 at 10.32.33.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-33-05-Screen%20Shot%202021-05-25%20at%2010.32.33.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-10-33-05-Screen%20Shot%202021-05-25%20at%2010.32.33.png">
   
-  ![Screen Shot 2021-05-25 at 13.52.23.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-52-54-Screen%20Shot%202021-05-25%20at%2013.52.23.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-52-54-Screen%20Shot%202021-05-25%20at%2013.52.23.png">
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.8: Cấu hình máy chủ `Web`
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.8**
-
-### Cấu hình máy chủ `Web` :
-
-#### 1. Cài đặt `Apache` và `web browser`
+### 1. Cài đặt `Apache` và `web browser`
 
 Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser console` 
 
@@ -546,7 +544,7 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
 
 ==> Vậy là thành công
 
-#### 2. Chạy một trang `web` cá nhân
+### 2. Chạy một trang `web` cá nhân
 
 - **B1**: Tạo thư mục `/var/www/html/tamquoc` (*`tamquoc` kà tên web*)
 
@@ -601,7 +599,7 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
 
 ### Cấu hình máy chỉ `FTP`
 
-#### 1. Cài đặt `FTP` trên `CentOS 8`
+#### 1. Cài đặt `FTP` trên `CentOS`
 
 - **B1** : Gõ lệnh `yum install vsftpd` 
   
